--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/1ce02c1186.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Leader Board</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <main>
+      <!-- Header Section  -->
+      <header class="header-section">
+        <div class="header-item">
+          <div class="nav-brand">
+            <img src="./images/icons/logo.png" alt="" />
+          </div>
+          <div class="my-nav">
+            <nav>
+              <span>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Works</a>
+              </span>
+              <span>
+                <img class="pro-pic" src="./images/icons/profile.png" alt="" />
+              </span>
+            </nav>
+          </div>
+        </div>
+      </header>
+
       <section class="container">
         <div class="top-players">
           <h2 class="section-title">Top Players</h2>
@@ -80,6 +106,84 @@
                 <p class="blog-author">By <a href="">Danny Sapio</a></p>
               </div>
             </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Latest Courses -->
+      <section class="container">
+        <h2 class="section-title">Latest Courses</h2>
+        <div class="courses">
+          <div class="course">
+            <div class="course-banner">
+              <img src="./images/courses/course-1.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">React - The Complete Guide 2020</h3>
+              <p class="course-author">Reed Krakoff.</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock clock-clr"></i>
+                  <span>01:30hr</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="./images/courses/course-2.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">
+                Powerpoint 2020 Master Powerpoint Cour
+              </h3>
+              <p class="course-author">Walter Scott</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4</span>
+                </div>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock clock-clr"></i>
+                  <span>01:20hr</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="./images/courses/course-3.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+              <p class="course-author">Reed Krakoff.</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock clock-clr"></i>
+                  <span>01:30hr</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
